source/lcc/Compiler/antlr/LCLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from LCLang.g4 by ANTLR 4.9.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.3")]
[System.CLSCompliant(false)]
public partial class LCLangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SByte=1, Short=2, Int=3, Long=4, Byte=5, UShort=6, UInt=7, ULong=8, Float=9, 
		Double=10, Bool=11, Void=12, False=13, True=14, Break=15, Case=16, Const=17, 
		Continue=18, Default=19, Do=20, Else=21, For=22, Goto=23, If=24, Native=25, 
		Return=26, Struct=27, Switch=28, Use=29, While=30, Underscore=31, LeftParen=32, 
		RightParen=33, LeftBracket=34, RightBracket=35, LeftBrace=36, RightBrace=37, 
		Less=38, LessEqual=39, Greater=40, GreaterEqual=41, LeftShift=42, RightShift=43, 
		Plus=44, PlusPlus=45, Minus=46, MinusMinus=47, Star=48, Div=49, Mod=50, 
		And=51, Or=52, AndAnd=53, OrOr=54, Caret=55, Not=56, Tilde=57, Semi=58, 
		Comma=59, Colon=60, Ref=61, Assign=62, StarAssign=63, DivAssign=64, ModAssign=65, 
		PlusAssign=66, MinusAssign=67, LeftShiftAssign=68, RightShiftAssign=69, 
		AndAssign=70, XorAssign=71, OrAssign=72, Equal=73, NotEqual=74, Dot=75, 
		Arrow=76, At=77, Identifier=78, BinaryConstant=79, DecimalConstant=80, 
		OctalConstant=81, HexadecimalConstant=82, FloatingConstant=83, DigitSequence=84, 
		CharacterConstant=85, TripleStringLiteral=86, StringLiteral=87, Whitespace=88, 
		Newline=89, BlockComment=90, LineComment=91;
	public const int
		RULE_compilationUnit = 0, RULE_compilationUnitElement = 1, RULE_functionDeclaration = 2, 
		RULE_functionParameters = 3, RULE_functionParameter = 4, RULE_compoundStatement = 5, 
		RULE_blockItemList = 6, RULE_blockItem = 7, RULE_statement = 8, RULE_labeledStatement = 9, 
		RULE_labelCase = 10, RULE_labelDefault = 11, RULE_selectionStatement = 12, 
		RULE_selectionIFStatement = 13, RULE_selectionSwitchStatement = 14, RULE_iterationStatement = 15, 
		RULE_iterationWhileStatement = 16, RULE_iterationDoStatement = 17, RULE_iterationForStatement = 18, 
		RULE_forSections = 19, RULE_forInitializer = 20, RULE_forInitializerItem = 21, 
		RULE_forCondition = 22, RULE_forIteratorExpression = 23, RULE_forIteratorExpressionItem = 24, 
		RULE_jumpStatement = 25, RULE_jumpContinue = 26, RULE_jumpBreak = 27, 
		RULE_jumpReturn = 28, RULE_useDirectives = 29, RULE_useDirective = 30, 
		RULE_objectPath = 31, RULE_structDeclarationStatement = 32, RULE_structDeclaration = 33, 
		RULE_structDeclarationElements = 34, RULE_structDeclarationElement = 35, 
		RULE_varableDeclarationStatement = 36, RULE_varableDeclaration = 37, RULE_attributeSpecifier = 38, 
		RULE_varableDeclarator = 39, RULE_initializer = 40, RULE_groupInitializer = 41, 
		RULE_groupInitializerItems = 42, RULE_groupInitializerItem = 43, RULE_lcStructElementType = 44, 
		RULE_lcFunctionParamType = 45, RULE_lcVariableType = 46, RULE_lcPrimitiveType = 47, 
		RULE_lcRefArrayPrimitiveType = 48, RULE_lcArrayPrimitiveType = 49, RULE_lcUserType = 50, 
		RULE_arrayIndexer = 51, RULE_expressionSequence = 52, RULE_expressionStatement = 53, 
		RULE_expression = 54, RULE_varMemoryLocation = 55, RULE_baseConstant = 56, 
		RULE_constant = 57, RULE_intConstant = 58, RULE_floatConstant = 59;
	public static readonly string[] ruleNames = {
		"compilationUnit", "compilationUnitElement", "functionDeclaration", "functionParameters", 
		"functionParameter", "compoundStatement", "blockItemList", "blockItem", 
		"statement", "labeledStatement", "labelCase", "labelDefault", "selectionStatement", 
		"selectionIFStatement", "selectionSwitchStatement", "iterationStatement", 
		"iterationWhileStatement", "iterationDoStatement", "iterationForStatement", 
		"forSections", "forInitializer", "forInitializerItem", "forCondition", 
		"forIteratorExpression", "forIteratorExpressionItem", "jumpStatement", 
		"jumpContinue", "jumpBreak", "jumpReturn", "useDirectives", "useDirective", 
		"objectPath", "structDeclarationStatement", "structDeclaration", "structDeclarationElements", 
		"structDeclarationElement", "varableDeclarationStatement", "varableDeclaration", 
		"attributeSpecifier", "varableDeclarator", "initializer", "groupInitializer", 
		"groupInitializerItems", "groupInitializerItem", "lcStructElementType", 
		"lcFunctionParamType", "lcVariableType", "lcPrimitiveType", "lcRefArrayPrimitiveType", 
		"lcArrayPrimitiveType", "lcUserType", "arrayIndexer", "expressionSequence", 
		"expressionStatement", "expression", "varMemoryLocation", "baseConstant", 
		"constant", "intConstant", "floatConstant"
	};

	private static readonly string[] _LiteralNames = {
		null, "'sbyte'", "'short'", "'int'", "'long'", "'byte'", "'ushort'", "'uint'", 
		"'ulong'", "'float'", "'double'", "'bool'", "'void'", "'false'", "'true'", 
		"'break'", "'case'", "'const'", "'continue'", "'default'", "'do'", "'else'", 
		"'for'", "'goto'", "'if'", "'native'", "'return'", "'struct'", "'switch'", 
		"'use'", "'while'", "'_'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", 
		"'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", 
		"'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "';'", 
		"','", "':'", "'ref'", "'='", "'*='", "'/='", "'%='", "'+='", "'-='", 
		"'<<='", "'>>='", "'&='", "'^='", "'|='", "'=='", "'!='", "'.'", "'->'", 
		"'@'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SByte", "Short", "Int", "Long", "Byte", "UShort", "UInt", "ULong", 
		"Float", "Double", "Bool", "Void", "False", "True", "Break", "Case", "Const", 
		"Continue", "Default", "Do", "Else", "For", "Goto", "If", "Native", "Return", 
		"Struct", "Switch", "Use", "While", "Underscore", "LeftParen", "RightParen", 
		"LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Less", "LessEqual", 
		"Greater", "GreaterEqual", "LeftShift", "RightShift", "Plus", "PlusPlus", 
		"Minus", "MinusMinus", "Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", 
		"Caret", "Not", "Tilde", "Semi", "Comma", "Colon", "Ref", "Assign", "StarAssign", 
		"DivAssign", "ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", 
		"RightShiftAssign", "AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", 
		"Dot", "Arrow", "At", "Identifier", "BinaryConstant", "DecimalConstant", 
		"OctalConstant", "HexadecimalConstant", "FloatingConstant", "DigitSequence", 
		"CharacterConstant", "TripleStringLiteral", "StringLiteral", "Whitespace", 
		"Newline", "BlockComment", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "LCLang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static LCLangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LCLangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LCLangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CompilationUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(LCLangParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UseDirectivesContext useDirectives() {
			return GetRuleContext<UseDirectivesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CompilationUnitElementContext[] compilationUnitElement() {
			return GetRuleContexts<CompilationUnitElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CompilationUnitElementContext compilationUnitElement(int i) {
			return GetRuleContext<CompilationUnitElementContext>(i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILCLangVisitor<TResult> typedVisitor = visitor as ILCLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Use) {
				{
				State = 120;
				useDirectives();
				}
			}

			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SByte) | (1L << Short) | (1L << Int) | (1L << Long) | (1L << Byte) | (1L << UShort) | (1L << UInt) | (1L << ULong) | (1L << Float) | (1L << Double) | (1L << Bool) | (1L << Void) | (1L << Struct))) != 0) || _la==Identifier) {
				{
				{
				State = 123;
				compilationUnitElement();
				}
				}
				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 129;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CompilationUnitElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VarableDeclarationStatementContext varableDeclarationStatement() {
			return GetRuleContext<VarableDeclarationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructDeclarationStatementContext structDeclarationStatement() {
			return GetRuleContext<StructDeclarationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		public CompilationUnitElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnitElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILCLangVisitor<TResult> typedVisitor = visitor as ILCLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnitElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitElementContext compilationUnitElement() {
		CompilationUnitElementContext _localctx = new CompilationUnitElementContext(Context, State);
		EnterRule(_localctx, 2, RULE_compilationUnitElement);
		try {
			State = 134;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 131;
				varableDeclarationStatement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 132;
				structDeclarationStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 133;
				functionDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LcPrimitiveTypeContext lcPrimitiveType() {
			return GetRuleContext<LcPrimitiveTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(LCLangParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftParen() { return GetToken(LCLangParser.LeftParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightParen() { return GetToken(LCLangParser.RightParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CompoundStatementContext compoundStatement() {
			return GetRuleContext<CompoundStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionParametersContext functionParameters() {
			return GetRuleContext<FunctionParametersContext>(0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILCLangVisitor<TResult> typedVisitor = visitor as ILCLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclarationContext functionDeclaration() {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_functionDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			lcPrimitiveType();
			State = 137;
			Match(Identifier);
			State = 138;
			Match(LeftParen);
			State = 140;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SByte) | (1L << Short) | (1L << Int) | (1L << Long) | (1L << Byte) | (1L << UShort) | (1L << UInt) | (1L << ULong) | (1L << Float) | (1L << Double) | (1L << Bool) | (1L << Void))) != 0) || _la==Identifier) {
				{
				State = 139;
				functionParameters();
				}
			}

			State = 142;
			Match(RightParen);
			State = 143;
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionParametersContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionParameterContext[] functionParameter() {
			return GetRuleContexts<FunctionParameterContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionParameterContext functionParameter(int i) {
			return GetRuleContext<FunctionParameterContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(LCLangParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(LCLangParser.Comma, i);
		}
		public FunctionParametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionParameters; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILCLangVisitor<TResult> typedVisitor = visitor as ILCLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionParameters(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionParametersContext functionParameters() {
		FunctionParametersContext _localctx = new FunctionParametersContext(Context, State);
		EnterRule(_localctx, 6, RULE_functionParameters);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			functionParameter();
			State = 150;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 146;
				Match(Comma);
				State = 147;
				functionParameter();
				}
				}
				State = 152;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionParameterContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LcFunctionParamTypeContext lcFunctionParamType() {
			return GetRuleContext<LcFunctionParamTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(LCLangParser.Identifier, 0); }
		public FunctionParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionParameter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILCLangVisitor<TResult> typedVisitor = visitor as ILCLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionParameterContext functionParameter() {
		FunctionParameterContext _localctx = new FunctionParameterContext(Context, State);
		EnterRule(_localctx, 8, RULE_functionParameter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153;
			lcFunctionParamType();
			State = 154;
			Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
